# jedi-model-data

./: CMakeLists.txt  README.md
.github/workflows/: push-to-s3.yaml
testinput_tier_1/saber/: bifourier_balance.nc  bifourier_covariance.nc  dirac_gsi_geos_global.nml  dirac_gsi_geos_global_opt_1.nml  dirac_gsi_geos_global_opt_2.nml  dirac_gsi_geos_global_opt_3.nml  dirac_gsi_gfs_global.nml  gauss_state.nc  landsea.nc  orographic_interp.nc
testinput_tier_1/vader/: dust_gauss_state_F12_lfric2um.nc  dust_gauss_state_F12_um2lfric.nc  gauss_ocean_F12.nc  gauss_state_F12.nc  relative_humidity_A.nc  wind_at_10m_A.nc  wind_at_10m_A_flipped.nc
